python-app/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-django-service 
spec:
  type: NodePort
  selector:
    app : django-python-app 
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
