python-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: "foo.bar.com"
    http: 
      paths:
      - pathType: Prefix
        path: "/bar"
        backend: 
          service: 
            name: python-app-django-service 
            port: 
              number: 8000
